--- a/public/style.css
+++ b/public/style.css
@@ -82,3 +82,128 @@
 .text--highlight{
     color: #64A6BD;
 }
+
+.calendar{
+    background-color: #fff;
+    padding: 20px 0;
+}
+.calendar__inner{
+    display: flex;
+    margin: 0 auto 25px auto;
+    justify-content: center;
+    align-items: center;
+}
+.calendar__inner2{
+    overflow: hidden;
+    width: 135px;
+}
+.calendar__change-year{
+    display: flex;
+    transition: all .2s ease-in-out;
+    width: max-content;
+    margin: auto;
+}
+.calendar__previous, .calendar__next {
+    user-select: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: #FFC839;
+    font-weight: 300;
+}
+.calendar__item{
+    cursor: pointer;
+    width: 65px;
+    margin: 0px 35px;
+}
+.calendar__other-year{
+    color: #d8d8d8;
+    font-size: 26px;    
+    transition: all .2s ease-in-out;
+    transform: scale(0);
+}
+.calendar__current-year{
+    font-size: 26px;
+    transition: all .2s ease-in-out;
+    color: #797775;
+    text-align: center;
+}
+
+.calendar__navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px 0;
+}
+.calendar__grid{
+    display: grid;
+    grid-template-columns: repeat(7, minmax(50px, 1fr));
+    text-align: center;
+}
+.calendar__month-name {
+    font-size: 24px;
+    margin: 0 50px;
+}
+.calendar__days-of-week{
+    display: grid;
+    grid-column: span 7;    
+    grid-template-columns: repeat(7, 1fr);
+}
+.calendar__day{
+    cursor: pointer;
+    user-select: none;
+    margin: 15px 25px;
+    display: flex;
+    justify-self: center;
+    width: 35px;
+    height: 35px;
+    align-self: center;
+    line-height: 1;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    color: #555B6E;
+    font-size: 22px;
+}
+.calendar__day--current{
+    color: #ffc839 !important;
+}
+.calendar__day--selected{
+    border: 2px solid #a723ff;
+    border-radius: 50px;
+    background-color: #CE93D8;
+    color: #fff !important;
+}
+.calendar__day--weekend{
+    color: #ff3b3b;
+    font-weight: 500;
+}
+.calendar__day--holiday{
+    color: #00c4ff;
+    font-weight: 500;
+}
+.message{
+    text-align: center;
+    font-size: 24px;
+    padding: 60px 0;
+}
+.startOnMon{
+    grid-column: 1;
+}
+.startOnTue{
+    grid-column: 2;
+}
+.startOnWed{
+    grid-column: 3;
+}
+.startOnThu{
+    grid-column: 4;
+}
+.startOnFri{
+    grid-column: 5;
+}
+.startOnSat{
+    grid-column: 6;
+}
+.startOnSun{
+    grid-column: 7;
+}
