--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,41 +2,55 @@
 <html lang="pl">
     <%- include('partials/head'); %>
 <body>
-    <div class="title">czas czas czas</div>
-    <div class="container">
-        <div class="container__inner">
-            <div class="container__detail"></div>
-            <div class="container__title">Napisz na co czekasz</div>
-        </div>
-        <label for="event-name">Nazwij wydarzenie</label>
-        <input type="text" name="event-name" id="event-name">
-        <button class="button">Przejdź dalej</button>
+    <div class="wrapper">
+        <div class="title">czas czas czas</div>
     </div>
-    <div class="container">
-        <div class="container__inner">
-            <div class="container__detail"></div>
-            <div class="container__title">Zaznacz dzień</div>
+    <div class="box">
+        <div class="box__wrapper">
+            <div class="box__mark box__mark--event-name"></div>
+            <div class="box__title">Napisz na co czekasz.</div>
         </div>
-        <div class="calendar"></div>
-        <button class="button">Przejdź dalej</button>
+        
+        <div class="box__wrapper-second">
+            <label class="text box__text" for="event-name">Nazwij wydarzenie</label>
+            <input type="text" name="event-name" id="event-name" class="input">
+            <button class="button box__button">Przejdź dalej</button>
+        </div>
     </div>
-    <div class="container">
-        <div class="container__inner">
-            <div class="container__detail"></div>
-            <div class="container__title">Podsumowanie</div>
+    <div class="box">
+        <div class="box__wrapper">
+            <div class="box__mark box__mark--calendar"></div>
+            <div class="box__title">Zaznacz dzień.</div>
         </div>
-        <p class="text text--big">To już ostani krok, zerknij jeszcze tylko raz na szczegóły.</p>
+        <div class="box__wrapper-second">
 
-        <div class="summary">
-            <div class="summary__text">Nazwa Twojego wydarzenia:</div>
-            <div class="summary__event-name">Ślub</div>
+            <div class="calendar">
+            </div>
+            <button class="button box__button">Przejdź dalej</button>
         </div>
-
-        <div class="summary">
-            <div class="summary__text">Data wydarzenia:</div>
-            <div class="summary__event-date">01.07.2023</div>
-        </div>
-        <button class="button">Zapisz</button>
     </div>
+    <div class="box">
+        <div class="box__wrapper">
+            <div class="box__mark box__mark--event-summary"></div>
+            <div class="box__title">Podsumowanie.</div>
+        </div>
+        
+        <div class="box__wrapper-second">
+            <p class="summary box__summary text text--big">To już ostani krok, zerknij jeszcze tylko raz na szczegóły.</p>
+    
+            <div class="box__wrapper-third">
+                <div class="text text--medium">Nazwa Twojego wydarzenia:</div>
+                <div class="text text--medium text--highlight">Ślub</div>
+            </div>
+    
+            <div class="box__wrapper-third">
+                <div class="text text--medium">Data wydarzenia:</div>
+                <div class="text text--medium text--highlight">01.07.2023</div>
+            </div>
+            <button class="button box__button">Zapisz</button>
+        </div>
+    </div>
+    <script src="js/util/createElement.js"></script>
+    <script src="js/calendar.js"></script>
 </body>
 </html>
