--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Każdy na coś czeka</title>
+    <script src="js/dayjs.min.js"></script>
+    <script src="js/dayjs_locale_pl.js"></script>
+    <script src="js/dayjs_plugin_weekday.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
