--- a/public/style.css
+++ b/public/style.css
@@ -25,13 +25,17 @@
     font-weight: 600;
     font-size: var(--medium-font-size);
     padding: 15px;
-    margin: 30px 0;
+    width: 50vw;
+}
+.box__input{
+    margin-top: 30px;
 }
 .button{
     font-size: var(--medium-font-size);
     color: var(--yellow-font-color);
     background-color: #fff0;
     border: 0px;
+     cursor: pointer;
 }
 .wrapper{
     overflow: hidden;
@@ -51,10 +55,11 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    margin: 0 auto 400px 0;
+    margin: 0 auto 200px 0;
+    align-items: flex-start;
 }
 .box__button{
-    margin: 0 0 0 auto;
+    margin: 30px 0 0 auto;
 }
 .box__wrapper{
     display: flex;
@@ -87,6 +92,7 @@
     width: 70%;
 }
 .summary__title{
+    margin-bottom: 100px;
     font-size: var(--big-font-size);
     color: var(--main-font-color);
 }
@@ -103,11 +109,14 @@
     font-size: var(--medium-font-size);
     color: var(--yellow-font-color);
 }
-
+.calendar{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
 .calendar__navigation {
     display: flex;
     align-items: center;
-    justify-content: center;
     margin: 50px 0;
 }
 .calendar__grid{
@@ -115,7 +124,7 @@
     grid-template-columns: repeat(7, minmax(50px, 1fr));
     font-size: var(--small-font-size);
     color: var(--main-font-color);
-    text-align: center;
+    gap: 50px 100px;
 }
 .calendar__month-name {
     font-size: var(--medium-font-size);
@@ -124,17 +133,13 @@
     width: 300px;
     text-align: center;
 }
-.calendar__day{
+.calendar__day {
     cursor: pointer;
     user-select: none;
-    margin: 15px 25px;
     display: flex;
-    justify-self: center;
     width: 35px;
     height: 35px;
-    align-self: center;
     line-height: 1;
-    justify-content: center;
     align-items: center;
 }
 .calendar__day--current{
@@ -142,6 +147,10 @@
 }
 .calendar__day--selected{
     color: #64A6BD !important;
+}
+.calendar__day--past{
+    color: #e4e4e4;
+    text-decoration: line-through;
 }
 .calendar__day--weekend{
     color: #ff3b3b;
