--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         
         <div class="box__wrapper-second">
             <label class="label" for="event-name">Nazwij wydarzenie</label>
-            <input class="input" type="text" name="event-name" id="event-name-input">
+            <input class="input box__input" type="text" name="event-name" id="event-name-input">
             <button class="button box__button text text--medium">Przejdź dalej</button>
         </div>
     </div>
@@ -24,8 +24,7 @@
         </div>
         <div class="box__wrapper-second">
 
-            <div class="calendar">
-            </div>
+            <div class="calendar"></div>
             <button class="button box__button">Przejdź dalej</button>
         </div>
     </div>
