Dodałem bazę danych (mongoose) i zapisywanie odliczania

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,9 @@
     
             <div class="summary__wrapper">
                 <div class="summary__text">Data wydarzenia:</div>
-                <div id="event-date-summary" class="summary__text summary__text--highlight"> </div>
+                <div id="event-date" class="summary__text summary__text--highlight"> </div>
             </div>
-            <button class="button box__button">Zapisz</button>
+            <button id="save" class="button box__button">Zapisz</button>
         </div>            
     </div>
     <script src="js/util/createElement.js"></script>
