Dodałem możliwość wpisania godziny do wydarzenia

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,8 +58,7 @@
         </div>            
     </div>
     <script src="js/util/createElement.js"></script>
-    <script src="js/data_validation.js"></script>
+    <script src="js/send_data.js"></script>
     <script src="js/calendar.js"></script>
-    <script src="js/summary.js"></script>
 </body>
 </html>
