Dodałem alternatywne odliczanie

--- a/views/countdown.ejs
+++ b/views/countdown.ejs
@@ -42,7 +42,7 @@
     </div>
     <div class="section">
         <div class="section__title">A gdyby tak spojrzeć na to <span class="section__title--highlight-red">inaczej</span>?</div>
-        <div class="section__text">Jeżeli jesteś kobietą przez ten czas uśmiechniesz się do kogoś 124 razy. Panom uśmiech zabłądzi na usta trochę rzadziej, około 21 razy. Niezależnie od płci zamrugasz 521 razy, i pewnie dodatkowo raz, kiedy przeczytasz to zdanie. Nabierzesz pełne płuca powietrza jakieś 40 tysięcy razy.</div>
+        <div class="section__text">Jeżeli jesteś kobietą przez ten czas uśmiechniesz się do kogoś <span id="smile-woman"></span> razy. Panom uśmiech zabłądzi na usta trochę rzadziej, około <span id="smile-man"></span> razy. Niezależnie od płci zamrugasz <span id="blink"></span> razy, i pewnie dodatkowo raz, kiedy przeczytasz to zdanie. Nabierzesz pełne płuca powietrza jakieś <span id="breath"></span> razy.</div>
     </div>
     <div class="section">
         <div class="section__title"><span class="section__title--highlight-blue">Podziel się</span> z innymi tym, na co czekasz</div>
