Przyciski na głównej stronie przenoszą już do następnych sekcji

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,10 @@
             <div class="section__content">
                 <label class="label" for="event-name">Nazwij wydarzenie</label>
                 <input class="input section__input" type="text" name="event-name" id="event-name-input">
-                <button class="button input__button text text--medium">Przejdź dalej</button>
+                <a class="button input__button" href="#calendar">Przejdź dalej</a>
             </div>
         </div>
-        <div class="section">
+        <div id="calendar" class="section">
             <div class="section__title"><span class="section__title--highlight-blue">Zaznacz</span> dzień i wpisz godzinę</div>
             <div class="section__content">
                 <div class="calendar"></div>
@@ -26,10 +26,10 @@
                         <input id="minutes" type="text" class="time-form__input time-form__input--minutes">
                     </div>
                 </div>
-                <button class="button section__button">Przejdź dalej</button>
+                <a class="button section__button" href="#summary">Przejdź dalej</a>
             </div>
         </div>
-        <div class="section">
+        <div id="summary" class="section">
             <div class="section__title">Podsumowanie</div>
             <div class="section__content">
                 <div class="summary">
