--- a/public/style.css
+++ b/public/style.css
@@ -128,11 +128,11 @@
 .button{
     font-size: 24px;
     border: 0px;
-    cursor: pointer;
     background-color: #278fcc;
     color: #fff;
     padding: 10px 20px;
-
+    user-select: none;
+    text-decoration: none;
 }
 .summary__button, .input__button, .section__button{
     margin: 25px 0 0 auto;
