--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
             <div class="section__title"><span class="section__title--highlight-blue">Napisz</span> na co czekasz</div>
             <div class="section__content">
                 <label class="label" for="event-name">Nazwij wydarzenie</label>
-                <input class="input section__input" type="text" name="event-name" id="event-name-input">
+                <input class="input section__input" type="text" name="event-name" id="event-name-input" placeholder="Weekend">
                 <a class="button input__button" href="#calendar">Przejdź dalej</a>
             </div>
         </div>
@@ -21,9 +21,9 @@
                 <div class="time-form-wrapper">
                     <label class="label" for="event-name">Wpisz godzinę</label>
                     <div class="time-form label__time-form">
-                        <input id="hours" type="text" class="time-form__input time-form__input--hours">
+                        <input id="hours" type="text" class="time-form__input time-form__input--hours" placeholder="23">
                         <div class="time-form__colon">:</div>
-                        <input id="minutes" type="text" class="time-form__input time-form__input--minutes">
+                        <input id="minutes" type="text" class="time-form__input time-form__input--minutes" placeholder="59">
                     </div>
                 </div>
                 <a class="button section__button" href="#summary">Przejdź dalej</a>
